fixed spacing in repo link

--- a/docs/src/app/home/pages/home/home.component.scss
+++ b/docs/src/app/home/pages/home/home.component.scss
@@ -32,7 +32,7 @@
         align-items: center;
         gap: 16px;
         justify-content: center;
-        margin-top: 64px;
+        margin-top: 40px;
 
         &>img{
             height:48px;
